<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/lucency">

        <TextView
            android:id="@+id/patrol_return"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:drawableLeft="@mipmap/left"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="返回"
            android:textColor="@color/colorWhite"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="管道检测"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/requisition_title_small" />

        <Button
            android:id="@+id/save"
            style="@style/BtnSendStyle"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:text="保存" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/login_bg"
            android:orientation="vertical">

            <LinearLayout
                style="@style/LinearCenterVertical"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextView"
                        android:text="@string/imageName" />
                </LinearLayout>

                <EditText
                    android:id="@+id/imageName"
                    style="@style/FunctionEdtStyle" />

            </LinearLayout>

            <include layout="@layout/view_item" />

            <LinearLayout
                style="@style/LinearCenterVertical"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextView"
                        android:text="@string/roadName" />
                </LinearLayout>

                <EditText
                    android:id="@+id/roadName"
                    style="@style/FunctionEdtStyle" />

            </LinearLayout>

            <include layout="@layout/view_item" />

            <LinearLayout
                style="@style/LinearCenterVertical"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextView"
                        android:text="@string/lineDot" />
                </LinearLayout>

                <EditText
                    android:id="@+id/lineDot"
                    style="@style/FunctionEdtStyle" />

            </LinearLayout>

            <include layout="@layout/view_item" />

            <LinearLayout
                style="@style/LinearCenterVertical"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextView"
                        android:text="@string/connectionPoint" />
                </LinearLayout>

                <EditText
                    android:id="@+id/connectionPoint"
                    style="@style/FunctionEdtStyle" />

            </LinearLayout>

            <include layout="@layout/view_item" />

            <LinearLayout
                style="@style/LinearCenterVertical"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextView"
                        android:text="@string/startingPointOrigin" />
                </LinearLayout>

                <EditText
                    android:id="@+id/startingPointOrigin"
                    style="@style/FunctionEdtStyle"
                    android:inputType="number|numberDecimal" />

            </LinearLayout>

            <include layout="@layout/view_item" />

            <LinearLayout
                style="@style/LinearCenterVertical"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextView"
                        android:text="@string/startingPointEnd" />
                </LinearLayout>

                <EditText
                    android:id="@+id/startingPointEnd"
                    style="@style/FunctionEdtStyle"
                    android:inputType="number|numberDecimal" />

            </LinearLayout>

            <include layout="@layout/view_item" />

            <LinearLayout
                style="@style/LinearCenterVertical"
                android:padding="5dp">

                <TextView
                    style="@style/TextView"
                    android:text="@string/folwDirection" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <Spinner
                    android:id="@+id/folwDirection"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:entries="@array/pipe" />
            </LinearLayout>

            <include layout="@layout/view_item" />

            <LinearLayout
                style="@style/LinearCenterVertical"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextView"
                        android:text="@string/pipeDiameter" />
                </LinearLayout>

                <EditText
                    android:id="@+id/pipeDiameter"
                    style="@style/FunctionEdtStyle" />

            </LinearLayout>

            <include layout="@layout/view_item" />

            <LinearLayout
                style="@style/LinearCenterVertical"
                android:padding="5dp">

                <TextView
                    style="@style/TextView"
                    android:text="@string/pipe" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <Spinner
                    android:id="@+id/pipe"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:entries="@array/folwDirection" />
            </LinearLayout>

            <include layout="@layout/view_item" />

            <LinearLayout
                style="@style/LinearCenterVertical"
                android:padding="5dp">

                <TextView
                    style="@style/TextView"
                    android:text="@string/type" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <Spinner
                    android:id="@+id/type"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:entries="@array/type" />
            </LinearLayout>

            <include layout="@layout/view_item" />

            <LinearLayout
                style="@style/LinearCenterVertical"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextView"
                        android:text="@string/inspectDate" />
                </LinearLayout>

                <EditText
                    android:id="@+id/inspectDate"
                    style="@style/FunctionEdtStyle"
                    android:focusable="false" />
            </LinearLayout>

            <include layout="@layout/view_item" />

            <TextView
                style="@style/Requisition_TextStyle"
                android:padding="5dp"
                android:text="@string/remark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:background="@drawable/equipment_info_eit">

                <EditText
                    android:id="@+id/remark"
                    style="@style/Requisition_EditText"
                    android:gravity="top"
                    android:textSize="@dimen/personage_text_tiny" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>